--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-search btn-outline-success" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -54,7 +54,7 @@
     <section id="content" class="container">
       <div id ="header" class="text-center">
         <div id ="background-entete" class="playfair position-relative">
-          <div id="entete-text">
+          <div id="entete-text" class="playfair">
             <h2 class="text-48">Reparation de console et de smartephone</h2>
             <span class="text-36">Phrase d'accroche à déterminer</span>
           </div> 
@@ -79,6 +79,8 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -102,6 +104,13 @@
               <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="asset/images/amazon-prime-day-deals-nintendo-switch-1562596166.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fourth slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -122,16 +131,21 @@
       </div>
 
       <div class="card-group">
+        <a class="card-link" href="telephone.html">
         <div class="card mr-1">
           <div class="card-body p-5 card-font" id="img-console">
               <h5 class="card-title mt-5 text-center playfair">Répération de console</h5>
           </div>
         </div>
+      </a>
+      <a class="card-link" href="telephone.html">
         <div class="card ml-1">
-          <div class="card-body p-5 card-font" id="img-telephone">
+          
+            <div class="card-body p-5 card-font" id="img-telephone">
               <h5 class="card-title mt-5 text-center playfair">Répération de téléphone</h5>
-          </div>
+            </div>
         </div>
+      </a>
       </div>
     </section>
     
