--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <div id ="header" class="text-center">
         <div id ="background-entete" class="playfair position-relative">
           <div id="entete-text" class="playfair">
-            <h2 class="text-48">Reparation de console et de smartephone</h2>
-            <span class="text-36">Phrase d'accroche à déterminer</span>
+            <h2 class="text-48 text-shadow">Reparation de console et de smartephone</h2>
+            <span class="text-36 text-shadow">Phrase d'accroche à déterminer</span>
           </div> 
         </div>
       </div>
@@ -91,21 +91,21 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="asset/images/274937629_477517154116050_8357893157309106510_n.jpg" class="d-block w-100" alt="...">
+            <img src="asset/images/274332131_466244378576661_3517310084040936391_n.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="asset/images/amazon-prime-day-deals-nintendo-switch-1562596166.webp" class="d-block w-100" alt="...">
+            <img src="asset/images/274332131_466244378576661_3517310084040936391_n.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="asset/images/amazon-prime-day-deals-nintendo-switch-1562596166.webp" class="d-block w-100" alt="...">
+            <img src="asset/images/274332131_466244378576661_3517310084040936391_n.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Fourth slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -122,7 +122,7 @@
         </button>
       </div>
 
-      <div class="playfair text-center">
+      <div id="choice" class="playfair text-center">
 
         <h2>Choisir votre appareil</h2>
 
@@ -130,10 +130,10 @@
 
       </div>
 
-      <div class="card-group">
+      <div class="card-group justify-content-center">
         <a class="card-link" href="telephone.html">
         <div class="card mr-1">
-          <div class="card-body p-5 card-font" id="img-console">
+          <div class="card-body p-5 card-font img-choice" id="img-console">
               <h5 class="card-title mt-5 text-center playfair">Répération de console</h5>
           </div>
         </div>
@@ -141,7 +141,7 @@
       <a class="card-link" href="telephone.html">
         <div class="card ml-1">
           
-            <div class="card-body p-5 card-font" id="img-telephone">
+            <div class="card-body p-5 card-font img-choice" id="img-telephone">
               <h5 class="card-title mt-5 text-center playfair">Répération de téléphone</h5>
             </div>
         </div>
