--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       </div>
 
-      <div class="card-group justify-content-center">
+      <div class="card-group justify-content-center choice-card">
         <a class="card-link" href="telephone.html">
         <div class="card mr-1">
           <div class="card-body p-5 card-font img-choice" id="img-console">
