Travail CSS index et telephone
Nav-bar bar de recherche terminé

Mise en place du choix de téléphone, il reste beaucoup de petit soucis
à fixer.

--- a/telephone.html
+++ b/telephone.html
@@ -44,9 +44,9 @@
                 <a class="nav-link disabled">Disabled</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-search btn-outline-success" type="submit">Search</button>
+            <form class="form-search-nav-bar d-flex">
+              <input class="search-bar loupe form-control me-2" type="search" placeholder="Selection un appareil" aria-label="Search">
+              <button class="btn btn-search btn-outline-success" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -63,11 +63,39 @@
       </div>
     </div>
 
-    <div class="d-flex">
-      <div>text1</div>
-      <div>text2</div>
-      <div>text3</div>
-      
+    <div id="phone-block" class="d-flex justify-content-center flex-wrap">
+      <figure class="figure">
+        <img id="img-phone-1" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption id="caption-phone-1" class="figure-caption caption-style">Telephone 1</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-2" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-3" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-4" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-5" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-6" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+        <img class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption id="img-phone-7" class="figure-caption caption-style">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+        <img id="img-phone-8" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
+      </figure>
     </div>
 
 
