Création page contact
Creaction contact.css
Ajout du formulaire contact
Mdofication de l'icone loupe

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <a class="nav-link disabled">Disabled</a>
                 </li>
               </ul>
-              <form class="form-search-nav-bar d-flex">
+              <form class="form-search-nav-bar form-search-page d-flex">
                 <input class="search-bar loupe form-control me-2" type="search" placeholder="Selection un appareil" aria-label="Search">
               <button class="btn btn-search btn-outline-success" type="submit">Search</button>
             </form>
@@ -124,7 +124,7 @@
 
       <div id="choice" class="playfair text-center">
 
-        <h2>Choisir votre appareil</h2>
+        <h2 class="title-page">Choisir votre appareil</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta ipsum vulputate enim euismod, nec.</p>
 
@@ -153,8 +153,10 @@
       <ul id ="contact" class="playfair">
         <li class="fw-bolder text-36">Contactez nous !</li>
         <li><img class="logo-contact" src="asset/images/icon/facebook.png" class="card-img-top" alt="Facebook">
-          <a target="_blank" href="https://www.facebook.com/jeremy.verhoye.3" title="Facebook" class="link-nav-bar">Notre page facebook</a></li>
-        <li><img class="logo-contact" src="asset/images/icon/mail.png"/> Laissez un message</li>
+          <a target="_blank" href="https://www.facebook.com/jeremy.verhoye.3" title="Facebook" 
+          class="link-nav-bar">Notre page facebook</a></li>
+        <li><img class="logo-contact" src="asset/images/icon/mail.png"/><a href="contact.html" 
+          title="Facebook" class="link-nav-bar">Laissez un message</a></li>
         </ul>
       </footer>
     
