--- a/telephone.html
+++ b/telephone.html
@@ -63,51 +63,66 @@
       </div>
     </div>
 
-    <div id="phone-block" class="d-flex justify-content-center flex-wrap">
-      <figure class="figure">
-        <img id="img-phone-1" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption id="caption-phone-1" class="figure-caption caption-style">Telephone 1</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-2" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-3" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-4" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">Telephone 1</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-5" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-6" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-        <img class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption id="img-phone-7" class="figure-caption caption-style">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-        <img id="img-phone-8" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption caption-style">A caption for the above image.</figcaption>
-      </figure>
+    <div id="phone-block">
+
+      <p class="text-center playfair title-page">Choisir un téléphone</p>
+
+      <form class="form-search-page d-flex">
+        <input class="search-bar loupe form-control me-2" type="search" placeholder="Selection un appareil" aria-label="Search">
+        <button class="btn btn-search btn-outline-success" type="submit">Search</button>
+      </form>
+
+      <div class="d-flex justify-content-center flex-wrap">
+        <figure class="figure">
+          <img id="img-phone-1" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-1" class="figure-caption caption-style">Telephone 1</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-2" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-2" class="figure-caption caption-style">Telephone 2</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-3" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-3" class="figure-caption caption-style">Telephone 3</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-4" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-4" class="figure-caption caption-style">Telephone 4</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-5" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-5" class="figure-caption caption-style">Telephone 5</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-6" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-6" class="figure-caption caption-style">Telephone 6</figcaption>
+        </figure>
+        <figure class="figure">
+          <img class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-7" class="figure-caption caption-style">Telephone 7</figcaption>
+        </figure>
+        <figure class="figure">
+          <img id="img-phone-8" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <figcaption id="caption-phone-8" class="figure-caption caption-style">Telephone 8</figcaption>
+        </figure>
+      </div>
     </div>
 
 
   </section>
     
-      <footer id="footer" class="d-flex text-center align-items-center justify-content-center">
-        <ul id ="contact">
-          <li>Contactez nous !</li>
-          <li><img class="logo-contact" src="asset/images/icon/facebook.png" class="card-img-top" alt="..."> Notre page facebook</li>
-          <li><img class="logo-contact" src="asset/images/icon/mail.png"/>Laissez un message</li>
-          </ul>
-        </footer>
+  <footer id="footer" class="d-flex text-center align-items-center justify-content-center">
+    <ul id ="contact" class="playfair">
+      <li class="fw-bolder text-36">Contactez nous !</li>
+      <li><img class="logo-contact" src="asset/images/icon/facebook.png" class="card-img-top" alt="Facebook">
+        <a target="_blank" href="https://www.facebook.com/jeremy.verhoye.3" title="Facebook" 
+        class="link-nav-bar">Notre page facebook</a>
+      </li>
+      <li><img class="logo-contact" src="asset/images/icon/mail.png"/>
+        <a href="contact.html" title="Facebook" class="link-nav-bar">Laissez un message</a>
+      </li>
+    </ul>
+  </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
