--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
         <p class="text-center title-page my-5">Laissez un message</p>
 
-        <div id="formulaire" class="mb-5">
+        <div id="block-formulaire" class="mb-5">
             <form>
                 <div class="d-flex justify-content-evenly">
                     <div class="mb-3 px-2">
