--- a/contact.html
+++ b/contact.html
@@ -54,46 +54,47 @@
 
     <section>
 
-        <p class="text-center title-page my-5">Laissez un message</p>
+        <p id="send-note" class="text-center title-page my-5 playfair">Laissez un message</p>
 
         <div id="block-formulaire" class="mb-5">
-            <form>
+            <form id="formulaire" class="playfair">
                 <div class="d-flex justify-content-evenly">
-                    <div class="mb-3 px-2">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div class="mb-3 px-3 text-center w-100">
+                        <label for="Name" class="form-label">
+                          Nom
+                        </label>
+                        <input type="text" class="form-control form-style" id="Name" placeholder="Votre nom" aria-describedby="NameHelp">
                     </div>
-                    <div class="mb-3 px-2">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div class="mb-3 px-3 text-center w-100">
+                        <label for="FirstName" class="form-label">
+                          Prénom <span class="text-danger font-weight-bold">*</span>
+                        </label>
+                        <input type="text" class="form-control form-style" id="FirstName" placeholder="Votre prénom" aria-describedby="firstNameHelp">
                     </div>
                 </div>
                 <div class="d-flex justify-content-evenly">
-                    <div class="mb-3 px-2">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3 px-2">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    <div class="mb-3 px-3 text-center w-100">
+                        <label for="exampleInputEmail" class="form-label">
+                          Adresse email <span class="text-danger font-weight-bold">*</span></label>
+                        <input type="email" class="form-control form-style" id="exampleInputEmail" placeholder="Votre email" aria-describedby="emailHelp">
+                      </div>
+                    <div class="mb-3 px-3 text-center w-100">
+                        <label for="PhoneNumber" class="form-label">Numéro de téléphone</label>
+                        <input type="text" class="form-control form-style" id="PhoneNumber" placeholder="Numéro de téléphone" aria-describedby="PhoneNumberHelp">
                     </div>
                 </div>
-                <div class="mb-3 px-2">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <div class="mb-3 px-3 text-center w-100">
+                    <label for="exampleInputEmail1" class="form-label">
+                      Objet <span class="text-danger font-weight-bold">*</span></label></label>
+                    <input type="text" class="form-control form-style" id="object" placeholder="Objet du message"  aria-describedby="emailHelp">
                 </div>
-                <div class="form-floating mb-3 px-2">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">Comments</label>
+                <div class="form-floating mb-3 px-3">
+                    <textarea class="form-control form-style" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label class="comments-label" for="floatingTextarea2">Commentaires <span class="text-danger font-weight-bold">*</span></label></label>
                   </div>
 
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                    <button type="submit" class="btn btn-search btn-outline-success mb-3">Envoyer</button>
                 </div>
               </form>
         </div>
