Création de la page piece
Création de la page piece qui permettra de choisir la ou les pièces
à réparer

--- a/telephone.html
+++ b/telephone.html
@@ -74,35 +74,35 @@
 
       <div class="d-flex justify-content-center flex-wrap">
         <figure class="figure">
-          <img id="img-phone-1" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-1" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-1" class="figure-caption caption-style">Telephone 1</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-2" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-2" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-2" class="figure-caption caption-style">Telephone 2</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-3" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-3" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-3" class="figure-caption caption-style">Telephone 3</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-4" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-4" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-4" class="figure-caption caption-style">Telephone 4</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-5" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-5" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-5" class="figure-caption caption-style">Telephone 5</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-6" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-6" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-6" class="figure-caption caption-style">Telephone 6</figcaption>
         </figure>
         <figure class="figure">
-          <img class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-7" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-7" class="figure-caption caption-style">Telephone 7</figcaption>
         </figure>
         <figure class="figure">
-          <img id="img-phone-8" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="...">
+          <a href="piece.html"><img id="img-phone-8" class="img" src="./asset/images/placeholder_150.png" class="figure-img img-fluid rounded" alt="..."></a>
           <figcaption id="caption-phone-8" class="figure-caption caption-style">Telephone 8</figcaption>
         </figure>
       </div>
