--- a/piece.html
+++ b/piece.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="asset/css/style.css" rel="stylesheet">
+    <link href="asset/css/piece.css" rel="stylesheet">
     <title>SOS CONSOLE</title>
 </head>
   <body>
@@ -52,53 +53,90 @@
     </header>
 
     <section id="content" class="container">
-      <div id ="header" class="text-center">
-        <div id ="background-entete" class="playfair position-relative">
-          <div id="entete-text" class="playfair">
-            <h2 class="text-48 text-shadow">Reparation de console et de smartephone</h2>
-            <span class="text-36 text-shadow">Phrase d'accroche à déterminer</span>
-          </div> 
-        </div>
-      </div>
-
-      <div>
-        <p class="text-center playfair title-page">Choisir un téléphone</p>
-        <div>
-            <div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Default checkbox
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Default checkbox
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Default checkbox
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Default checkbox
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                      Default checkbox
-                    </label>
-                  </div>
+        <div id ="header" class="text-center">
+            <div id ="background-entete" class="playfair position-relative">
+                <div id="entete-text" class="playfair">
+                    <h2 class="text-48 text-shadow">Reparation de console et de smartephone</h2>
+                    <span class="text-36 text-shadow">Phrase d'accroche à déterminer</span>
+                </div> 
             </div>
-            <div><img src ="" alt=""/></div>
+
+    <div class="pt-5">
+        <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
+
+        <div>
+            <div class="d-flex align-items-center justify-content-center">
+                <div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                </div>
+                <div><img src ="./asset/images/Img_appareil.png" alt="Appareil" class="my-3"/></div>
+                <div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+            </div>
+          </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-search btn-outline-success mb-3">Envoyer</button>
+            </div>
         </div>
-      </div>
+    </div>
 
     </section>
     
