--- a/piece.html
+++ b/piece.html
@@ -64,6 +64,8 @@
     <div class="pt-5">
         <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
 
+        <div id="arrow"></div>
+
         <div>
             <div class="d-flex align-items-center justify-content-center">
                 <div>
@@ -98,7 +100,7 @@
                         </label>
                     </div>
                 </div>
-                <div><img src ="./asset/images/Img_appareil.png" alt="Appareil" class="my-3"/></div>
+                <div><img src ="./asset/images/Img_appareil.png" alt="Appareil" id="img-piece" class="my-3"/></div>
                 <div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
