Création devis et création file d'arianne
Creation de la page de devis
Creation du file d'arianne, le css est placé dans style.css

--- a/telephone.html
+++ b/telephone.html
@@ -65,6 +65,16 @@
 
     <div id="phone-block">
 
+      <div>
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="circle-empty"></div>
+          <div class="trait-empty"></div>
+          <div class="circle-empty"></div>
+          <div class="trait-empty"></div>
+          <div class="circle-empty"></div>
+        </div>
+      </div>
+
       <p class="text-center playfair title-page">Choisir un téléphone</p>
 
       <form class="form-search-page d-flex">
