--- a/piece.html
+++ b/piece.html
@@ -62,9 +62,27 @@
             </div>
 
     <div class="pt-5">
+
+      <div>
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="circle-in-progess">
+            <div>
+              <div class="validate-1"></div>
+              <div class="validate-2"></div>
+            </div>
+          </div>
+          <div class="trait-validate"></div>
+          <div class="circle-in-progess"></div>
+          <div class="trait-empty"></div>
+          <div class="circle-empty"></div>
+        </div>
+      </div>       
+
         <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
 
         <div id="arrow"></div>
+
+
 
         <div>
             <div class="d-flex align-items-center justify-content-center">
