--- a/telephone.html
+++ b/telephone.html
@@ -67,7 +67,7 @@
 
       <div>
         <div class="d-flex align-items-center justify-content-center">
-          <div class="circle-empty"></div>
+          <div class="circle-in-progess"></div>
           <div class="trait-empty"></div>
           <div class="circle-empty"></div>
           <div class="trait-empty"></div>
