--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,7 @@
                 </div>
               </form>
               
+              <p class="text-danger mr-3">Champs obligatoire *</p>
         </div>
     </section>
     
