--- a/piece.html
+++ b/piece.html
@@ -52,7 +52,7 @@
       </nav>
     </header>
 
-    <section id="content" class="container">
+    <section id="content" class="container pb-5">
         <div id ="header" class="text-center">
             <div id ="background-entete" class="playfair position-relative">
                 <div id="entete-text" class="playfair">
@@ -65,11 +65,8 @@
 
       <div>
         <div class="d-flex align-items-center justify-content-center">
-          <div class="circle-in-progess">
-            <div>
-              <div class="validate-1"></div>
-              <div class="validate-2"></div>
-            </div>
+          <div class="circle-in-validate">
+
           </div>
           <div class="trait-validate"></div>
           <div class="circle-in-progess"></div>
@@ -78,13 +75,12 @@
         </div>
       </div>       
 
-        <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
-
         <div id="arrow"></div>
 
+        <div id="phone-block">
 
+          <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
 
-        <div>
             <div class="d-flex align-items-center justify-content-center">
                 <div>
                     <div class="form-check">
@@ -153,7 +149,9 @@
             </div>
           </div>
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-search btn-outline-success mb-3">Envoyer</button>
+                <button  type="submit" class="btn-devis btn-search btn-outline-success mt-3 link-btn">
+                  <a class="link-success" href="devis.html">Envoyer</a>
+                  </button>
             </div>
         </div>
     </div>
