Continueté front end
Ajout de police SourceSansPro

ajout de confirmation_devis
Ajout fichier js avec script apparition de flèche

--- a/devis.html
+++ b/devis.html
@@ -121,9 +121,10 @@
                 </div>
 
             </div>
-
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn-devis btn-search btn-outline-success m-3">Téléchargez le devis</button>
+              <a href="confirmation_devis.html" 
+              class="btn-devis btn-search btn-outline-success m-3 link-success text-center link-btn">
+                 Obtenir un devis</a>
             </div>
         </div>
 
