--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div id ="header" class="text-center">
         <div id ="background-entete" class="playfair position-relative">
           <div id="entete-text" class="playfair">
-            <h2 class="text-48 text-shadow">Reparation de console et de smartephone</h2>
-            <span class="text-36 text-shadow">Phrase d'accroche à déterminer</span>
+            <h2 class="display-2 text-shadow">Reparation de console et de smartephone</h2>
+            <span class="display-6 text-shadow">Phrase d'accroche à déterminer</span>
           </div> 
         </div>
       </div>
@@ -161,6 +161,7 @@
         </ul>
       </footer>
     
+    <script src="./asset/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
