--- a/piece.html
+++ b/piece.html
@@ -56,7 +56,7 @@
         <div id ="header" class="text-center">
             <div id ="background-entete" class="playfair position-relative">
                 <div id="entete-text" class="playfair">
-                    <h2 class="text-48 text-shadow">Reparation de console et de smartephone</h2>
+                    <h2 class="display-2 text-shadow">Reparation de console et de smartephone</h2>
                     <span class="text-36 text-shadow">Phrase d'accroche à déterminer</span>
                 </div> 
             </div>
@@ -75,41 +75,42 @@
         </div>
       </div>       
 
-        <div id="arrow"></div>
-
         <div id="phone-block">
 
           <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
 
+          <div id="arrow"><img src="./asset/images/icon/Arrow_1.png"/></div>
+
+
             <div class="d-flex align-items-center justify-content-center">
                 <div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
+                        Default checkbox
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input source-pro-sans" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                        Default checkbox
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
@@ -117,41 +118,40 @@
                 <div><img src ="./asset/images/Img_appareil.png" alt="Appareil" id="img-piece" class="my-3"/></div>
                 <div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <label class="form-check-label source-pro-sans" for="flexCheckDefault">
                         Default checkbox
                         </label>
                     </div>
             </div>
           </div>
             <div class="d-flex justify-content-center">
-                <button  type="submit" class="btn-devis btn-search btn-outline-success mt-3 link-btn">
-                  <a class="link-success" href="devis.html">Envoyer</a>
-                  </button>
+                  <a class="btn-devis btn-search btn-outline-success mt-3 link-btn link-success" 
+                  href="devis.html">Envoyer</a>
             </div>
         </div>
     </div>
@@ -169,9 +169,11 @@
         </ul>
       </footer>
     
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="./asset/js/script.js"></script>
   </body>
 </html>
