creation base de donnee
Création du script SQL, fichier php en cours de création.
Coté front quelques textes ont vu leurs fonts modifiés

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="asset/css/style.css" rel="stylesheet">
     <link href="asset/css/accueil.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./asset/images/icon/logo_sos_consoles.png">
     <title>SOS CONSOLE</title>
 </head>
   <body>
@@ -15,7 +16,7 @@
       <div id="background-body">
         <nav id="slider" class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="asset/images/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
+            <a class="navbar-brand" href="index.html"><img src="./asset/images/icon/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <div class="navbar-toggler-icon">
                 <div id="navbar-trait-1" class="navbar-trait"></div>
@@ -123,11 +124,11 @@
         </button>
       </div>
 
-      <div id="choice" class="playfair text-center">
+      <div id="choice" class="playfair text-center text-white">
 
-        <h2 class="title-page">Choisir votre appareil</h2>
+        <h2 class="title-page display-4">Choisir votre appareil</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta ipsum vulputate enim euismod, nec.</p>
+        <p class="display-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porta ipsum vulputate enim euismod, nec.</p>
 
       </div>
 
