--- a/confirmation_devis.html
+++ b/confirmation_devis.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="./asset/images/icon/logo_sos_consoles.png">
     <link href="asset/css/style.css" rel="stylesheet">
     <link href="asset/css/contact.css" rel="stylesheet">
     <title>SOS CONSOLE</title>
@@ -15,7 +16,7 @@
       <div id="background-body">
         <nav id="slider" class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="asset/images/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
+            <a class="navbar-brand" href="index.html"><img src="./asset/images/icon/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <div class="navbar-toggler-icon">
                 <div id="navbar-trait-1" class="navbar-trait"></div>
@@ -69,7 +70,7 @@
 
         <div id="block-formulaire" class="mb-3">
 
-          <p id="last" class="text-center title-page my-3 playfair">Dernière étape</p>
+          <p id="last" class="text-center title-page display-4 my-3 playfair">Dernière étape</p>
           <p id="mail" class="text-center my-3 source-pro-sans">
             Pour recevoir votre devis, vous devez indiqué une adresse email, le devis sera envoyé directement à l'adresse noté</p>
 
