--- a/piece.html
+++ b/piece.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="./asset/images/icon/logo_sos_consoles.png">
     <link href="asset/css/style.css" rel="stylesheet">
     <link href="asset/css/piece.css" rel="stylesheet">
     <title>SOS CONSOLE</title>
@@ -15,7 +16,7 @@
       <div id="background-body">
         <nav id="slider" class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="asset/images/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
+            <a class="navbar-brand" href="index.html"><img src="./asset/images/icon/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <div class="navbar-toggler-icon">
                 <div id="navbar-trait-1" class="navbar-trait"></div>
@@ -77,7 +78,7 @@
 
         <div id="phone-block">
 
-          <p class="text-center playfair title-page mb-5">Choisir un téléphone</p>
+          <p class="text-center playfair title-page display-4 mb-5">Choisir les pièces</p>
 
           <div id="arrow"><img src="./asset/images/icon/Arrow_1.png"/></div>
 
