--- a/devis.html
+++ b/devis.html
@@ -16,7 +16,7 @@
       <div id="background-body">
         <nav id="slider" class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="./asset/images/icon/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
+            <a class="navbar-brand" href="index.php"><img src="./asset/images/icon/logo_sos_consoles.png" alt="SOS_CONSOLE"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <div class="navbar-toggler-icon">
                 <div id="navbar-trait-1" class="navbar-trait"></div>
