Mise en place des includes / requires
Includes et requires ajoutés dans les fichiers html
code html placer dans les fichiers php

--- a/ancien.html
+++ b/ancien.html
@@ -13,3 +13,12 @@
       </figure>
 </body>
 </html>
+
+
+<div class="card mr-1">
+    <img src="<?php echo'./asset/images/'.$resultat[$key]['image'];?>" class="w-100" alt="...">
+
+    <div class="card-body p-5 card-font img-choice img-console img-1">
+         <h5 class="card-title mt-5 text-center playfair"><?php print $resultat[$key]['name']; ?></h5>
+     </div>
+   </div>
